--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.6",
@@ -17,8 +18,7 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^0.4.1",
-    "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@openzeppelin/contracts": "^4.7.0",
-    "gitignore": "^0.7.0"
+    "hardhat-deploy-ethers": "^0.3.0-beta.13"
   }
 }
